--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "React App",
-  "name": "Create React App Sample",
+  "name": "Caleb Ouellette's personal website",
   "icons": [{
     "src": "favicon.png",
     "sizes": "64x64 32x32 24x24 16x16",
@@ -8,6 +8,6 @@
   }],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#333333",
+  "background_color": "#f2f2f2"
 }
